# hadouken-test-project

./: .clang-format  .clang-tidy  .cppcheck-suppress  .gitignore  .lcovrc  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/libhdk/: foo.hpp
lib/src/: foo.cpp
lib/test/: CMakeLists.txt
